Fixed scrollbars in Mozilla Firefox

--- a/src/app/messanger/Messanger.module.css
+++ b/src/app/messanger/Messanger.module.css
@@ -262,6 +262,7 @@
     overflow: auto;
     height: 60vh;
     margin-bottom: 2%;
+    scrollbar-width: none;
 }
 
 .message-block {
